@@ -10,6 +10,6 @@ PDEPEND=!build? ( >=net-misc/rsync-2.6.4 userland_GNU? ( >=sys-apps/coreutils-6.
 RDEPEND=dev-lang/python-exec:2 !build? ( >=sys-apps/sed-4.0.5 app-shells/bash:0[readline] >=app-admin/eselect-1.2 ) elibc_FreeBSD? ( sys-freebsd/freebsd-bin ) elibc_glibc? ( >=sys-apps/sandbox-2.2 ) elibc_uclibc? ( >=sys-apps/sandbox-2.2 ) >=app-misc/pax-utils-0.1.17 selinux? ( >=sys-libs/libselinux-2.0.94[python,python_targets_pypy(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_pypy(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),-python_single_target_python2_7(-)] ) xattr? ( kernel_linux? ( >=sys-apps/install-xattr-0.3 python_targets_pypy? ( dev-python/pyxattr[python_targets_pypy(-)?,-python_single_target_pypy(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) python_targets_python2_7? ( dev-python/pyxattr[python_targets_pypy(-)?,-python_single_target_pypy(-),python_targets_python2_7(-)?,-python_single_target_python2_7(-)] ) ) ) !<app-admin/logrotate-3.8.0 python_targets_pypy? ( virtual/pypy:0=[bzip2(+)] ) python_targets_python3_3? ( >=dev-lang/python-3.3.2-r2:3.3[bzip2(+)] ) python_targets_python3_4? ( dev-lang/python:3.4[bzip2(+)] ) python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[bzip2(+)] ) >=dev-lang/python-exec-2:=[python_targets_pypy(-)?,python_targets_python3_3(-)?,python_targets_python3_4(-)?,python_targets_python2_7(-)?,-python_single_target_pypy(-),-python_single_target_python3_3(-),-python_single_target_python3_4(-),-python_single_target_python2_7(-)]
 REQUIRED_USE=epydoc? ( python_targets_python2_7 ) || ( python_targets_pypy python_targets_python3_3 python_targets_python3_4 python_targets_python2_7 )
 SLOT=0
-SRC_URI=mirror://gentoo/portage-2.2.19.tar.bz2 http://dev.gentoo.org/~dolsen/releases/portage/portage-2.2.19.tar.bz2
+SRC_URI=mirror://gentoo/portage-2.2.20.tar.bz2 http://dev.gentoo.org/~dolsen/releases/portage/portage-2.2.20.tar.bz2
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=a851e090272f4ffb1e80ab0edd5b3aeb
+_md5_=c01efef12ec3a00baa05aecf8ecbe9e9
