@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1446 2015/05/13 21:06:42 dolsen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1447 2015/05/18 23:19:00 dolsen Exp $
+
+*portage-2.2.20 (18 May 2015)
+
+  18 May 2015; Brian Dolbec <dolsen@gentoo.org> +portage-2.2.20.ebuild,
+  -portage-2.2.19.ebuild:
+  Version Bump, remove previous version. Fixes bugs 539510, 549666, 549616,
+  549826, 534022.
 
 *portage-2.2.19 (13 May 2015)
 
